# test_teamUp

./: README.md  pyproject.toml
settings/: settings.py  urls.py
tests_app/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
tests_app/migrations/: 0001_initial.py
